Actualización del capitulo 3 de ejercicios PHP y del css

--- a/Cap3(IfySwitch)/index.html
+++ b/Cap3(IfySwitch)/index.html
@@ -96,6 +96,10 @@ Escribe un programa que ordene tres números enteros introducidos por teclado.
           <input type="submit" value="Ordenar">
         </form>
       </div>
+      <p></p>
     </div>
   </body>
+  <footer>
+    <h3>Jesús Caballero Corpas ©</h3>
+  </footer>
 </html>
