Actualización de todos los ejercicios del capitulo 5 de PHP de bucles

--- a/Cap5(Arrays)/index.html
+++ b/Cap5(Arrays)/index.html
@@ -228,7 +228,7 @@ Ejercicios de arrays del capitulo 5 de PHP
           anterior. El programa pedirá que el usuario teclee la traducción al inglés de cada una de las palabras
           y comprobará si son correctas. Al final, el programa deberá mostrar cuántas respuestas son válidas
           y cuántas erróneas.</span><br><br>
-          <form action="ejer01TresArrays.php" method="post">
+          <form action="ejer12JuegoMiniDiccionario.php" method="post">
             <button class="btn waves-effect waves-light green" type="submit" name="action">Ir al ejercicio
               <i class="material-icons right">send</i>
             </button>
@@ -239,14 +239,14 @@ Ejercicios de arrays del capitulo 5 de PHP
       <article class="card-panel black-text text-darken-2 light-green lighten-3">
         <h5>Ejercicio 13</h5>
         <div>
-          <span>Rellena un array bidimensional de 6 filas por 9 columnas con números enteros positivos comprendi-
-          dos entre 100 y 999 (ambos incluidos). Todos los números deben ser distintos, es decir, no se puede
+          <span>Rellena un array bidimensional de 6 filas por 9 columnas con números enteros positivos 
+          comprendidos entre 100 y 999 (ambos incluidos). Todos los números deben ser distintos, es decir, no se puede
           repetir ninguno. Muestra a continuación por pantalla el contenido del array de tal forma que se
           cumplan los siguientes requisitos:
           • Los números de las dos diagonales donde está el mínimo deben aparecer en color verde.
           • El mínimo debe aparecer en color azul.
           • El resto de números debe aparecer en color negro.</span><br><br>
-          <form action="ejer01TresArrays.php" method="post">
+          <form action="ejer13ArrayBidimensional.php" method="post">
             <button class="btn waves-effect waves-light green" type="submit" name="action">Ir al ejercicio
               <i class="material-icons right">send</i>
             </button>
@@ -262,7 +262,7 @@ Ejercicios de arrays del capitulo 5 de PHP
           color diferente para estas casillas donde puede saltar la figura. El alfil se mueve siempre en diagonal.
           El tablero cuenta con 64 casillas. Las columnas se indican con las letras de la “a” a la “h” y las filas
           se indican del 1 al 8.</span><br><br>
-          <form action="ejer01TresArrays.php" method="post">
+          <form action="ejer14Alfil.php" method="post">
             <button class="btn waves-effect waves-light green" type="submit" name="action">Ir al ejercicio
               <i class="material-icons right">send</i>
             </button>
@@ -277,7 +277,7 @@ Ejercicios de arrays del capitulo 5 de PHP
           en el sentido de las agujas del reloj. La matriz debe tener 12 filas por 12 columnas y debe contener
           números generados al azar entre 0 y 100. Se debe mostrar tanto la matriz original como la matriz
           resultado, ambas con los números convenientemente alineados.</span><br><br>
-          <form action="ejer01TresArrays.php" method="post">
+          <form action="ejer15RotaMatriz.php" method="post">
             <button class="btn waves-effect waves-light green" type="submit" name="action">Ir al ejercicio
               <i class="material-icons right">send</i>
             </button>
